Add ZGC to start script