@@ -1,3 +1,3 @@
 #!/bin/bash
 
-java --enable-preview -jar target/llama2j-1.0-SNAPSHOT.jar  "$@"
+java -Xmx16g -XX:+UnlockExperimentalVMOptions -XX:+UseZGC --enable-preview -jar target/llama2j-1.0-SNAPSHOT.jar  "$@"
